Introduce switch bootstrap
